[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "miniscons"
version = "0.1.0"
description = "SCons builders."

dependencies = []
requires-python = ">=3.8"

license = { file = "LICENSE.md" }
readme = "README.md"

authors = [{ name = "Joel Lefkowitz", email = "joellefkowitz@hotmail.com" }]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

keywords = ["scons"]

[project.urls]
Homepage = "https://github.com/JoelLefkowitz/miniscons"

[tool.hatch.build.targets.sdist]
include = ["src/*.py"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = "miniscons"

[tool.thx.jobs]
format = ["black . ", "isort . --no-sections"]
lint = ["pylint src --disable=C0114,C0115,C0116,C0411", "mypy -m src --ignore-missing-import"]
test = ["pytest"]
