[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "miniscons"
description = "SCons builders."
version = "0.1.0"

keywords = ["scons"]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

requires-python = ">=3.8"
dependencies = ["SCons==4.3.0"]

[project.optional-dependencies]
all = [
    "autoflake==1.4",
    "black==22.3.0",
    "bump2version==1.0.1",
    "isort==5.10.1",
    "mypy==0.961",
    "pylint==2.17.0",
    "pytest==7.1.2",
    "trufflehog3==3.0.7",
    "twine==5.0.0",
]

[[project.authors]]
name = "Joel Lefkowitz"
email = "joellefkowitz@hotmail.com"

[project.license]
file = "LICENSE.md"

[project.readme]
file = "README.md"

[project.urls]
Homepage = "https://github.com/JoelLefkowitz/miniscons"

[tool.hatch.build.targets.sdist]
include = ["src/*.py"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
src = "miniscons"

[tool.thx.jobs]
format = ["black . ", "isort . --no-sections", "npx prettier . --write"]

lint = [
    "npx cspell . --dot",
    "pylint src --disable=C0114,C0115,C0116,C0411",
    "mypy -m src --ignore-missing-import",
]

test = ["pytest . --doctest-modules --cov --cov-report=lcov"]
